<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF5F5F5"
    tools:context=".activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitStart"
            android:padding="10dp"
            android:layout_gravity="center"
            android:src="@mipmap/app_icon"/>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv1"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv1"
            android:paddingTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_alignStart="@id/tv1"
            android:layout_below="@id/tv1"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/iv1"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/font_color"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:text="@string/about_intro1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/font_color"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/about_intro2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/font_color"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/about_intro3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/font_color"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/about_intro4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/font_color"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/about_intro5"/>

    <Button
        android:id="@+id/log_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/log_off"/>

</LinearLayout>