<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ExerciseActivity">
    <!-- 选择题布局 -->
    <LinearLayout
        android:id="@+id/ques_type1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/ques_index1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/ques_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
        <ListView
            android:id="@+id/choose_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <!-- 填空题布局 -->
    <LinearLayout
      android:id="@+id/ques_type2"
      android:visibility="visible"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical">
        <ImageView
            android:id="@+id/ques_img"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <TextView
            android:id="@+id/ques_index2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/ques_text2"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="2dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/user_ans"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/white"
                android:layout_height="30dp"
                android:paddingStart="100dp"
                android:hint="@string/ques_tip"
                android:singleLine="true"
                android:background="@drawable/my_edit_view"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Answer:"
                android:textSize="16sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/font_color"
                android:gravity="center"
                android:layout_marginStart="10dp"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#AEAEAE" />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/exe_pre"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/btn_view_shape"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/pre_ques"
            android:gravity="center"/>
        <TextView
            android:id="@+id/exe_next"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/btn_view_shape1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/next_ques"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>